Fix carousel centering - properly center full-width carousel
- Changed margin approach from calc(-50vw + 50%) to negative margins
- Added margin-left: -50vw and margin-right: -50vw to break out of container
- Padding now 50vw on sides to center properly within viewport
- Carousel is now centered and spans full screen width

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -666,9 +666,10 @@ img {
 
 .post-videos, .post-gallery {
   margin-top: var(--space-10);
-  padding: var(--space-8) 0;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  padding: var(--space-8) 50vw;
   width: 100vw;
-  margin-left: calc(-50vw + 50%);
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -679,8 +680,6 @@ img {
 .post-gallery h3 {
   padding: 0 var(--space-6);
   margin-bottom: var(--space-4);
-  margin-left: calc(50vw - 50%);
-  width: calc(100% - (50vw - 50%) * 2);
 }
 
 /* ======================== Wix Content Override ======================== */
